--- a/test/data/web_content/index.html
+++ b/test/data/web_content/index.html
@@ -8,76 +8,109 @@
     </style>
 
     <script>
-        var objects = [];
-        var nodes = [];
-        var tiers = [];
+        const base_url = "api/v1/";
+        const api_endpoints = {"objects" : "hsm/objects"};
 
-        var object_labels = {"hestia::id" : "Id",
-                             "hestia::size" : "Size",
-                            }
+        const item_list_keys = {"objects" : {   "Id" : "hestia::id",
+                                                "Size": "hestia::size"},
+                                "tiers" : {"Id" : "id",
+                                            "Backend" : "backend"},
+                                "nodes" : {"Id" : "id",
+                                            "Tag" : "tag"},
+                                "datasets" : {"Id" : "id"},
+                                "users" : {"Id" : "id"},
+                                        }
+        
+        var list_items = {
+                          "users" : [],
+                          "nodes" : [],
+                          "tiers" : [],
+                          "datasets" : [],
+                          "objects" : [],
+                          }
 
-        var working_object = {"hestia::id" : 0,
-                              "hestia:size": 0};
+        var user = null;
+        var selected_object = null;
 
-        async function loadObjects() {
-            const response = await fetch("api/v1/hsm/objects");
-            objects = await response.json();
+        async function loadItems(itemType) {
+            const response = await fetch(base_url + api_endpoints[itemType]);
+            list_items[itemType] = await response.json();
+        }
 
-            var object_table = document.createElement("table");
-            objects.forEach(element => {
-                console.log(element);
-                var table_row = document.createElement("tr");
-                var row_content = document.createTextNode("Id: " + element["hestia::id"] + " - Size: " + element["hestia::size"]);
-                table_row.appendChild(row_content);
-                object_table.appendChild(table_row);
+        function displayItems(itemType){
+            let item_div = document.getElementById(itemType + "List");
+            let item_table = document.createElement("table");
+
+            let header_row = document.createElement("tr");
+            for (const key in item_list_keys[itemType])
+            {
+                let header_entry = document.createElement("th");
+                let content = document.createTextNode(key);
+                header_entry.appendChild(content);
+                header_row.appendChild(header_entry);
+            }
+            item_table.appendChild(header_row);
+
+            list_items[itemType].forEach(item => {
+                let table_row = document.createElement("tr");
+                for (const [key, value] of Object.entries(item_list_keys[itemType])) 
+                {
+                    let row_entry = document.createElement("td");
+                    let content = document.createTextNode(item[value]);
+                    row_entry.appendChild(content);
+                    table_row.appendChild(row_entry);
+                }
+                item_table.appendChild(table_row);
             });
-            var object_list_div = document.getElementById("objectList");
-            object_list_div.replaceChildren(object_table);
+            item_div.replaceChildren(item_table);
         }
 
-        async function loadTiers() {
-            const response = await fetch("api/v1/hsm/tiers");
-            tiers = await response.json();
+        function onLoggedIn(){
+            var login_view = document.getElementById("loginView");
+            login_view.style.visibility='hidden';
 
-            var tier_table = document.createElement("table");
-            tiers.forEach(element => {
-                var table_row = document.createElement("tr");
-                var row_content = document.createTextNode("Id: " + element.id + " - Backend: " + element.backend);
-                table_row.appendChild(row_content);
-                tier_table.appendChild(table_row);
-            });
-            var tier_list_div = document.getElementById("tiersList");
-            tier_list_div.replaceChildren(tier_table);
+            let usernameLabel = document.getElementById("usernameLabel");
+            var username_content = document.createTextNode(user.id);
+            usernameLabel.replaceChildren(username_content);
+
+            var logged_in_view = document.getElementById("loggedInView");
+            logged_in_view.style.visibility='visible';
+
+            let item_fields = ["nodes", "users", "datasets", "tiers", "objects"];
+            for(const field in item_fields)
+            {
+                loadItems(field);
+                displayItems(field);
+            }
         }
 
-        async function loadNodes() {
-            const response = await fetch("api/v1/nodes");
-            nodes = await response.json();
-
-            var node_table = document.createElement("table");
-            node_table.classList.add("listViewTable");
-            nodes.forEach(element => {
-                var node_table_row = document.createElement("tr");
-                var row_content = document.createTextNode("Id: " + element.id + " - Tag: " + element.tag);
-                node_table_row.appendChild(row_content);
-                node_table.appendChild(node_table_row);
-            });
-            var node_list_div = document.getElementById("nodesList");
-            node_list_div.replaceChildren(node_table);
+        function onRegister(){
+            onAuthenticate("api/v1/register");
         }
 
-        function loadObjectView(object){
-            var object_view_div = document.getElementById("objectView");
-            var view_content = document.createTextNode("Id: " + object["hestia::id"]);
-            object_view_div.replaceChildren(view_content);
+        function onLogin(){
+            onAuthenticate("api/v1/login");
         }
 
-        function onLoad(){
-            loadNodes();
-            loadTiers();
-            loadObjects();
+        async function onAuthenticate(url){
+            var username_input = document.getElementById("login_username_input").value;
+            var password_input = document.getElementById("login_username_password").value;
+            console.log("Authenticate with: " + username_input + " " + password_input);
 
-            loadObjectView(working_object);
+            body = "user=" + username_input + "&password=" + password_input;
+            try{
+                const response = await fetch(url, {
+                    method: "POST", 
+                    body: body, 
+                    headers: {"Content-Type": "application/x-www-form-urlencoded"}
+                });
+                user = await response.json();
+                console.log("Got user: " + user.id);
+                onLoggedIn();
+            }catch(error)
+            {
+                console.log("Got error: " + error);
+            }
         }
 
     </script>
@@ -85,24 +118,50 @@
 
 </head>
 
-<body onload="onLoad()">
+<body>
 <h1>Hestia</h1>
 
-<p>This is a Hestia (Hierarchical Storage Tiers Interface for Applications) based web app. See the repo <a href="https://git.ichec.ie/io-sea-internal/hestia"> README</a> for details.</p>
+<p>See the <a href="https://git.ichec.ie/io-sea-internal/hestia">README</a> for help.</p>
+
+<div id="loginView">
+<h2>Login</h2>
+
+<label for="login_username_input">Username:</label>
+<input id="login_username_input" type="text" name="username" />
+
+<label for="login_username_password">Password:</label>
+<input id="login_username_password" type="password" name="password" />
+
+<button id="register_button" onclick="onRegister()">Register</button>
+<button id="login_button" onclick="onLogin()">Login</button>
+</div>
+
+<div id="loggedInView" style="visibility:hidden">
+
+<p>Logged in as: <span id="usernameLabel"></span></p>
 
 <h2>System Overview</h2>
 
 <h3>Nodes</h3>
-<div id="nodesList">[]</div>
+<div id="nodesList">
+</div>
 
 <h3>Tiers</h3>
-<div id="tiersList">[]</div>
+<div id="tiersList">
+</div>
 
 <h3>Objects</h3>
-<div id="objectContainer">
-    <div id="objectList" style="display:inline-block">[]</div>
-    <div id="objectView" style="display:inline-block">
-    </div>
+<div id="objectsList">
+</div>
+
+<h3>Datasets</h3>
+<div id="datasetsList">
+</div>
+
+<h3>Users</h3>
+<div id="usersList">
+</div>
+
 </div>
 
 </body>
