IO-SEA Integrations Pt 3 of 3

--- a/src/hestia/web/http/index.html
+++ b/src/hestia/web/http/index.html
@@ -50,7 +50,7 @@
     <script>
         const base_url = 'api/v1/';
 
-        const item_list_keys = {"objects" : ["id", "name", "size", "", ""],
+        const item_list_keys = {"objects" : ["id", "name", "size", "creation_time", "content_modified_time", "content_accessed_time"],
                                 "tiers" : ["id", "priority"],
                                 "nodes" : ["id", "tag"],
                                 "datasets" : ["id"],
