Fixes for IO-SEA integrations and add docs

--- a/src/hestia/web/http/index.html
+++ b/src/hestia/web/http/index.html
@@ -56,9 +56,9 @@
                                 "datasets" : ["id", "objects"],
                                 "object_store_backends" : ["id", "backend_type", "node", "tiers", "config"],
                                 "users" : ["id", "name"],
-                                "extents" : ["id", "tier_priority", "object", "extents"],
+                                "extents" : ["id", "tier", "object", "extents"],
                                 "actions" : ["id", "subject_key", "action", "status", "transferred", "creation_time", "last_modified_time"],
-                                "metadatas" : ["id", "data"]
+                                "metadatas" : ["id", "object", "data"]
                                 };
         var user = null;
 
